style.css
*{
    padding:0;
    margin:0;
}

body {
    font-family:sans-serif;
    color:#fff;
    background:#333;
    text-align:center;
}

#status {
    border:4px solid #ffc;
    background-color:#ffe;
    color:#111;
    margin:10px;
    padding:10px;
}

#main{
    display:block;
    position:relative;
    width:300px;
    height:300px;
    margin:0 auto;
    overflow:hidden;
    border-radius:5px;
}

#capture-video, #capture-img{
    min-width:300px;
    height:300px;
    object-fit: cover;
}

.grid{
    position:absolute;
    top:0%;
    left:0%;
    width:100%;
    height:100%;
    list-style:none;
    font-weight:bold;
    color:#336;
    padding:2%;
    box-shadow: -5px -5px 10px 10px #333 inset;
            
    background-color:rgba(0,0,0,0.0);
    transition: background-color 0.5s;
}

.grid.static {
    background-color:rgba(0,0,0,0.9);
}
.grid li{
    background-color:rgba(255,255,255,0.2);
    box-sizing:border-box;
    border-radius:4px;
    border:2px dotted red;
    width:20%;
    height:20%;
    margin:2%;
    float:left;
    text-align:center;
    font-size:30pt;
    padding:4px;
    box-shadow: 0 0 10px 5px #000;
}


.grid.static li {
    background-color:#fff;
    border-color:#fff;
}

.grid.static li, #words li{
    transition:opacity, box-shadow 0.2s;

    opacity:0.6;
    box-shadow:none;
}

.grid.static li.lit, #words li.lit{
    opacity:1;
    box-shadow:0 0 5px 3px #fc3;
}

#words {
    list-style:none;
}

#words li {
    margin:4px;
    display:inline-block;
    background-color:#666;
    border-radius:8px;
    padding:4px 8px;
    font-size:12pt;
    text-shadow:1px 1px 1px #000;
}


#words::after {
    content: " ";
    display:block;
    clear:both;
}

#words li.word-length-3  { background-color:hsl(190, 50%, 50%); }
#words li.word-length-4  { background-color:hsl(160, 50%, 50%); }
#words li.word-length-5  { background-color:hsl(130, 50%, 50%); }
#words li.word-length-6  { background-color:hsl(100, 50%, 50%); }
#words li.word-length-7  { background-color:hsl(70,  50%, 50%); }
#words li.word-length-8  { background-color:hsl(40,  50%, 50%); }

#words li.word-length-9  { background-color:hsl(35,  60%, 50%); }
#words li.word-length-10 { background-color:hsl(30,  60%, 50%); }
#words li.word-length-11 { background-color:hsl(25,  60%, 50%); }
#words li.word-length-12 { background-color:hsl(20,  60%, 50%); }
#words li.word-length-13 { background-color:hsl(15,  60%, 50%); }
#words li.word-length-14 { background-color:hsl(10,  60%, 50%); }
#words li.word-length-15 { background-color:hsl(5,   60%, 50%); }
#words li.word-length-16 { background-color:hsl(0,   60%, 50%); }

button {
    border-radius:10px;
    margin:8px;
    background-color:#CFC;
    padding:4px 8px;
    font-size:24pt;
    border:none;
    cursor:pointer;
}

button:hover{
    background-color:#fff;
}

ul#settings {
    list-style:none;
    text-align:left;
    width:100%;
    max-width:300px;
    margin:16px auto;
    border-top:1px solid #666;
    border-bottom:1px solid #666;
    padding-top:4px;
    padding-bottom:4px;
}

ul#settings li {
    padding:4px;
    color:#999;
    font-size:small;
}
ul#settings li input {
    vertical-align:bottom;
    margin-right:4px;
    font-size:inherit;
}

